<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_ur5e_description</name>
  <version>2.0.6</version>
  <description>ur5e Resources used for MoveIt testing</description>

  <author email="kamomoyojpn@gmail.com">Kamogelo Moyo</author>

  <maintainer email="kamomoyojpn@gmail.com">Kamogelo Moyo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
